PR/42285: PR/41559: Daniel Hagerty: if_stf doesn't count output bytes